# components

./: .gitignore  .release-please-config.json  .release-please-manifest.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release.yml
napi/: CHANGELOG.md  Cargo.toml  package.json
napi/src/: lib.rs  types.rs
node/: CHANGELOG.md  package.json  pnpm-lock.yaml  tsconfig.json
node/src/: help.ts  index.ts  types.ts
node/src/utils/: color.ts  draw.ts  image.ts  index.ts
