[workspace]
members = ["napi",
    "packages/*",
]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/components"
repository = "https://github.com/puniyu/components"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
puniyu_skia = { version = "0.5", path = "../skia"}
thiserror = "2.0.17"

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true


