[package]
name = "puniyu_component_napi"
version = "0.3.1"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.6.1"
napi-derive = "3.4.0"

puniyu_skia.workspace = true
puniyu_component_help ={ path = "../packages/puniyu_component_help"}

[build-dependencies]
napi-build = "2.3.1"
